--- a/src/sample/AdminWindow.fxml
+++ b/src/sample/AdminWindow.fxml
@@ -24,7 +24,7 @@
             <Hyperlink layoutX="35.0" layoutY="375.0" onAction="#manageReadersAction" text="Reader Profiles" />
             <Hyperlink layoutX="35.0" layoutY="400.0" onAction="#manageBooksAction" text="Manage Books" />
             <Hyperlink layoutX="35.0" layoutY="425.0" onAction="#manageRequestsAction" text="Manage Requests" />
-            <Hyperlink layoutX="35.0" layoutY="450.0" onAction="#manageReviewsAction" text="Manage Reviews" />
+            <Hyperlink layoutX="35.0" layoutY="450.0" onAction="#ReturnBookAction" text="ReturnBook" />
             <Hyperlink fx:id="signOutButton" onAction="#signOutAction" text="SIGN OUT" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" />
             <Hyperlink fx:id="exitButton" layoutX="144.0" layoutY="716.0" onAction="#exitAction" text="EXIT" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0" />
             <Label layoutX="90.0" layoutY="275.0" text="Administrator" textFill="#6baddf" />
@@ -40,7 +40,7 @@
 <!--            <fx:include fx:id="manageAdmins" source="ManageAdmins.fxml" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />-->
             <fx:include fx:id="updateProfile" source="UpdateProfile.fxml" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
             <fx:include fx:id="manageRequests" source="ManageRequests.fxml" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-<!--            <fx:include fx:id="manageReviews" source="ManageReaders.fxml" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />-->
+            <fx:include fx:id="returnBook" source="ReturnBook.fxml" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children>
       </AnchorPane>
    </center>
