--- a/src/sample/Books.fxml
+++ b/src/sample/Books.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="786.0" prefWidth="1024.0" style="-fx-background-color: yellow;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.BooksController">
    <children>
@@ -35,7 +34,7 @@
                      <content>
                         <AnchorPane>
                            <children>
-                              <Pane layoutX="44.0" layoutY="28.0" prefHeight="161.0" prefWidth="560.0" style="-fx-border-color: #9c9c9c; -fx-border-radius: 3;">
+                              <Pane layoutX="44.0" layoutY="28.0" prefHeight="161.0" prefWidth="560.0" style="-fx-border-color: #9a9a9a; -fx-border-radius: 3;">
                                  <children>
                                     <Label layoutX="25.0" layoutY="5.0" text="Title:" />
                                     <Label layoutX="25.0" layoutY="30.0" text="Author:" />
@@ -43,17 +42,18 @@
                                     <Label layoutX="25.0" layoutY="80.0" text="Publisher:" />
                                     <Label layoutX="25.0" layoutY="105.0" text="Pages:" />
                                     <Label layoutX="25.0" layoutY="130.0" text="Availability:" />
-                                    <Label fx:id="titleDetail" layoutX="108.0" layoutY="5.0" text="Detail" />
-                                    <Label fx:id="authorDetail" layoutX="108.0" layoutY="30.0" text="Detail" />
-                                    <Label fx:id="yearDetail" layoutX="108.0" layoutY="80.0" text="Detail" />
-                                    <Label fx:id="publisherDetail" layoutX="108.0" layoutY="55.0" text="Detail" />
-                                    <Label fx:id="pagesDetail" layoutX="108.0" layoutY="105.0" text="Detail" />
-                                    <Label fx:id="availabilityDetail" layoutX="108.0" layoutY="130.0" text="Detail" />
+                                    <Label fx:id="titleDetail" layoutX="108.0" layoutY="5.0" />
+                                    <Label fx:id="authorDetail" layoutX="108.0" layoutY="30.0" />
+                                    <Label fx:id="yearDetail" layoutX="108.0" layoutY="80.0" />
+                                    <Label fx:id="publisherDetail" layoutX="108.0" layoutY="55.0" />
+                                    <Label fx:id="pagesDetail" layoutX="108.0" layoutY="105.0" />
+                                    <Label fx:id="availabilityDetail" layoutX="108.0" layoutY="130.0" />
                                     <Label fx:id="requestResponse" layoutX="294.0" layoutY="122.0" textFill="#eb0808" />
                                  </children>
                               </Pane>
                               <Label layoutX="45.0" layoutY="5.0" text="Selected:" />
-                              <Button layoutX="626.0" layoutY="29.0" mnemonicParsing="false" onAction="#requestAction" prefHeight="161.0" prefWidth="76.0" text="Request" />
+                              <Button layoutX="626.0" layoutY="118.0" mnemonicParsing="false" onAction="#requestAction" prefHeight="72.0" prefWidth="76.0" text="Request" />
+                              <Button layoutX="626.0" layoutY="28.0" mnemonicParsing="false" onAction="#refreshAction" prefHeight="67.0" prefWidth="76.0" text="Refresh" />
                            </children>
                         </AnchorPane>
                      </content>
@@ -64,7 +64,7 @@
                            <children>
                               <ListView fx:id="reviewsListView" layoutX="6.0" layoutY="9.0" onMouseClicked="#clickOnReview" prefHeight="200.0" prefWidth="373.0" />
                               <Label fx:id="review" alignment="TOP_LEFT" layoutX="395.0" layoutY="47.0" maxHeight="200.0" maxWidth="400.0" prefHeight="160.0" prefWidth="400.0" wrapText="true" />
-                              <Text layoutX="395.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Review:" />
+                              <Label layoutX="395.0" layoutY="22.0" text="Review:" />
                            </children>
                         </AnchorPane>
                      </content>
@@ -74,7 +74,7 @@
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="200.0">
                            <children>
                               <TextArea fx:id="reviewField" layoutX="25.0" layoutY="117.0" prefHeight="82.0" prefWidth="674.0" style="-fx-border-color: #9a9a9a; -fx-border-radius: 3;" wrapText="true" />
-                              <Pane layoutX="25.0" layoutY="30.0" prefHeight="64.0" prefWidth="759.0" style="-fx-border-color: #9c9c9c; -fx-border-radius: 3;">
+                              <Pane layoutX="25.0" layoutY="30.0" prefHeight="64.0" prefWidth="759.0" style="-fx-border-color: #9a9a9a; -fx-border-radius: 3;">
                                  <children>
                                     <Label layoutX="14.0" layoutY="12.0" text="Title:" />
                                     <Label layoutX="14.0" layoutY="37.0" text="Author:" />
