--- a/src/sample/Login.fxml
+++ b/src/sample/Login.fxml
@@ -1,28 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #0d2054;" xmlns="http://javafx.com/javafx/8.0.271" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.LoginController">
+<AnchorPane prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #0d2054;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.LoginController">
    <children>
       <AnchorPane layoutX="362.0" layoutY="31.0" prefHeight="338.0" prefWidth="306.0" style="-fx-background-color: #6baddf;">
          <children>
-            <TextField fx:id="userField" layoutX="51.0" layoutY="84.0" prefHeight="25.0" prefWidth="200.0" promptText="username/e-mail" />
-            <PasswordField fx:id="passwordField" layoutX="51.0" layoutY="142.0" prefHeight="25.0" prefWidth="200.0" promptText="password" />
-            <Text fill="#0d2054" layoutX="51.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User:" wrappingWidth="48.384765625" />
-            <Text fill="#0d2054" layoutX="51.0" layoutY="137.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password:" wrappingWidth="70.384765625" />
+            <TextField fx:id="userField" layoutX="52.0" layoutY="111.0" prefHeight="25.0" prefWidth="200.0" promptText="username/e-mail" />
+            <PasswordField fx:id="passwordField" layoutX="53.0" layoutY="179.0" prefHeight="25.0" prefWidth="200.0" promptText="password" />
+            <Text fill="#0d2054" layoutX="52.0" layoutY="108.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User:" wrappingWidth="48.384765625" />
+            <Text fill="#0d2054" layoutX="53.0" layoutY="174.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password:" wrappingWidth="70.384765625" />
             <Text fill="#0d2054" layoutX="107.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sign In">
                <font>
                   <Font size="25.0" />
                </font>
             </Text>
-            <Button fx:id="loginButton" layoutX="82.0" layoutY="274.0" mnemonicParsing="false" onAction="#loginButtonOnAction" prefHeight="25.0" prefWidth="138.0" style="-fx-background-color: #c65156;" text="Login" textAlignment="JUSTIFY" textFill="WHITE" />
-            <Hyperlink fx:id="forgotPasswordHiperlink" layoutX="89.0" layoutY="300.0" text="Forgot Password?" textFill="#0d2054" />
-            <ChoiceBox fx:id="titleChoiceBox" layoutX="51.0" layoutY="195.0" prefHeight="26.0" prefWidth="200.0" />
-            <Text fill="#0d2054" layoutX="52.0" layoutY="192.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Title:" wrappingWidth="70.384765625" />
-            <Label fx:id="loginMessageLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="4.0" layoutY="251.0" prefHeight="16.0" prefWidth="292.0" textAlignment="JUSTIFY" textOverrun="CLIP" />
+            <Button fx:id="loginButton" layoutX="81.0" layoutY="259.0" mnemonicParsing="false" onAction="#loginButtonOnAction" prefHeight="25.0" prefWidth="138.0" style="-fx-background-color: #c65156;" text="Login" textAlignment="JUSTIFY" textFill="WHITE" />
+            <Hyperlink fx:id="forgotPasswordHiperlink" layoutX="88.0" layoutY="291.0" text="Forgot Password?" textFill="#0d2054" />
+            <Label fx:id="loginMessageLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="7.0" layoutY="231.0" prefHeight="16.0" prefWidth="292.0" textAlignment="JUSTIFY" textOverrun="CLIP" />
          </children>
       </AnchorPane>
       <ImageView fx:id="brandingImageView" fitHeight="271.0" fitWidth="373.0" layoutX="8.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
